--- a/BurnTest/BurnTest/Views/Manage/OrderHistory.cshtml
+++ b/BurnTest/BurnTest/Views/Manage/OrderHistory.cshtml
@@ -29,12 +29,13 @@
                             {
                                 <tr role="row" class="odd">
                                     <td class="sorting_1">@itm.Id</td>
-                                    <td>@User.Identity.Name</td>
+                                    <td>@itm.Mail</td>
                                     <td>Black Desert</td>
                                     <td>@itm.OrderDateTime</td>
                                     <td>$@itm.Amount</td>
                                 </tr>
-                            } }
+                            } 
+                        }
                     </tbody>
                 </table>
             </div>
