--- a/BurnTest/BurnTest/wwwroot/css/Ticket.css
+++ b/BurnTest/BurnTest/wwwroot/css/Ticket.css
@@ -1,4 +1,33 @@
-﻿body {
+﻿.nav {
+    background-color: #fff;
+    overflow: hidden;
+    font-family: "Amatic SC", cursive;
+}
+
+.nav a {
+    float: left;
+    color: #000000;
+    text-align: center;
+    padding: 10px 18px;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+    transition-duration: 0.3s;
+    border-radius: 3px;
+}
+
+.nav a:hover {
+    background-color: #FF5722;
+    color: black;
+}
+
+.nav a.active {
+    background-color: #FF5722;
+    color: white;
+}
+
+
+body {
     background: #eee;
     margin: 0;
     padding: 0;
