--- a/BurnTest/BurnTest/Views/Manage/OrderHistory.cshtml
+++ b/BurnTest/BurnTest/Views/Manage/OrderHistory.cshtml
@@ -18,6 +18,7 @@
                             <th>Type</th>
                             <th>Order Date</th>
                             <th>Amount</th>
+                            <th>Status</th>
                         </tr>
                     </thead>
                 </table>
@@ -33,6 +34,7 @@
                                     <td>Black Desert</td>
                                     <td>@itm.OrderDateTime</td>
                                     <td>$@itm.Amount</td>
+                                    <td>@itm.Status</td>
                                 </tr>
                             } 
                         }
