--- a/BurnTest/BurnTest/Views/TicketManage/TicketMainPage.cshtml
+++ b/BurnTest/BurnTest/Views/TicketManage/TicketMainPage.cshtml
@@ -147,7 +147,8 @@
             {
                 <input type="submit" name="submit" value="out" class="btn " />
                 <input type="hidden" name="price" id="AllPrice" />
-                <input type="hidden" name="qt" id="Quantity" />}
+                <input type="hidden" name="qt" id="Quantity" />
+            }
         </div>
 
     </div>
