RV Rental service was added

--- a/BurnTest/BurnTest/Views/Home/Index.cshtml
+++ b/BurnTest/BurnTest/Views/Home/Index.cshtml
@@ -17,12 +17,13 @@
         <link rel='stylesheet' href='https://use.fontawesome.com/73d812ac28.css'>
         <script src="js/my_js.js"></script>
         <link rel="stylesheet" href="~/css/site.css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     </head>
 
     <body>
         <h1 id="main-title" style="margin-bottom: 0px;"><strong>Burning Man</strong></h1>
         <div>
-            <img src="/img/BmLogo.png.png" alt="Logo" style="display: block;margin-left: auto;margin-right: auto" width="500" height="500">
+            <img src="/img/BmLogo.png.png" alt="Logo" style="display: block;margin-left: auto;margin-right: auto; margin-bottom: 30px;" width="500" height="500">
         </div>
         <section id="performances">
             <h2 class="title_perf"><strong>Performances</strong></h2>
@@ -60,48 +61,51 @@
                 <div class="timeline">
                     <div class="swiper-container">
                         <div class="swiper-wrapper">
-                            <div id="swiper-id1" class="swiper-slide" data-year="1862">
+                            <div id="swiper-id1" class="swiper-slide" data-year="1986">
                                 <div class="swiper-slide-content">
-                                    <span class="timeline-year">1862</span>
-                                    <h4 class="timeline-title">The Start</h4>
-                                    <p class="timeline-text">Created in 1862 by brothers Julian and William Wild, specialists in equestrian art, The Wild Circus first set foot on French soil in 1876 for a series of performances. Very quickly, the back and forth between the two countries multiplied before a final installation in France in 1912 under the direction of Arthur Wild, the son of William.</p>
+                                    <span class="timeline-year">1986</span>
+                                    <h4 class="timeline-title">THE EARLY YEARSt</h4>
+                                    <p class="timeline-text">... it was supremely romantic. And so two years later, having thought of this morning and night for a couple of years I woke up and it was the solstice, and I thought "I'm tired of this." So I called up a friend and I said "Let's... let's burn a man, Jerry."</p>
                                 </div>
                             </div>
-                            <div id="swiper-id2" class="swiper-slide" data-year="1936">
+                            <div id="swiper-id2" class="swiper-slide" data-year="2000">
                                 <div class="swiper-slide-content">
-                                    <span class="timeline-year">1936</span>
-                                    <h4 class="timeline-title">Kovacs's revolution</h4>
-                                    <p class="timeline-text">When he died in 1936, the circus was bought by Rubben KOVACS, a descendant of Hungarian fairgrounds, who modernized it and increased its media notoriety by hosting television and radio programs in association with the ORTF.</p>
+                                    <span class="timeline-year">2000</span>
+                                    <h4 class="timeline-title">THE BODY</h4>
+                                    <p class="timeline-text">We couldn’t believe it was cold again either. And the wind storms were back. Regardless of the elements that came our way, we put our goggled faces into the wind and marched off across the playa.</p>
                                 </div>
                             </div>
-                            <div id="swiper-id3" class="swiper-slide" data-year="1952">
+                            <div id="swiper-id3" class="swiper-slide" data-year="2008">
                                 <div class="swiper-slide-content">
-                                    <span class="timeline-year">1952</span>
-                                    <h4 class="timeline-title">Gillieron’ years</h4>
-                                    <p class="timeline-text">After his disappearance in 1952, actor Adam Gilliéron became the owner. If public success is at the rendezvous, it is not the same concerning finances and the circus files for bankruptcy in 1992.</p>
+                                    <span class="timeline-year">2008</span>
+                                    <h4 class="timeline-title">American Dream</h4>
+                                    <p class="timeline-text">“And so from hour to hour we ripe and ripe,
+                                                             And then from hour to hour we rot and rot;
+                                                             And thereby hangs a tale.” — William Shakespeare,
+                                                             — As You Like It.</p>
                                 </div>
                             </div>
-                            <div id="swiper-id4" class="swiper-slide" data-year="1993">
+                            <div id="swiper-id4" class="swiper-slide" data-year="2009">
                                 <div class="swiper-slide-content">
-                                    <span class="timeline-year">1993</span>
-                                    <h4 class="timeline-title">The arrival of Eric FAURE</h4>
-                                    <p class="timeline-text">Eric FAURE, former collaborator of Adam Gilliéron, can not bring himself to see Wild Circus disappear and buy the company convinced that it can be revived. He modernized management and quickly returned to popular and financial success to make it one of the jewels of the Swiss and European circus in a few years. Jean FAURE shares this great adventure with his family and thus creates a new circus dynasty. His wife Edwige, actively participates in the reorganization of the company as General Manager, and his children, Lucie, great illusionist, and Louis, tamer of wild animals, are recognized artists.</p>
+                                    <span class="timeline-year">2009</span>
+                                    <h4 class="timeline-title">Evalution</h4>
+                                    <p class="timeline-text"> This year's art theme contemplates the power and the meaning of the process we call evolution. Design by Rod Garret and Larry Harvey. Rendering by Andrew Johnstone and Rod Garrett. In 2009, the Burning Man will rise above a 'tangled bank' consisting of irregular wooden triangles.</p>
                                 </div>
                             </div>
-                            <div id="swiper-id5" class="swiper-slide" data-year="2015">
+                            <div id="swiper-id5" class="swiper-slide" data-year="2018">
                                 <div class="swiper-slide-content">
-                                    <span class="timeline-year">2015</span>
-                                    <h4 class="timeline-title">Renewal</h4>
-                                    <p class="timeline-text">In the spring of 2015, like many entertainment companies, Wild Circus faces difficulties and must stop its tour. Passionate, man of challenges, Jean FAURE cannot resolve the disappearance of this flagship of the circus that he has helped to develop and keep alive for more than 30 years. Surrounded by his team, he decides that Wild Circus will be present in Monaco as every year. He entrusts the operational direction to his right hand Edward Snowden and the artistic direction to Michael McIntyre, a young artist and director already recognized. Together, they are betting on offering a completely new show that showcases the new generation of Swiss artists, all with respect for the traditional circus.</p>
+                                    <span class="timeline-year">2018</span>
+                                    <h4 class="timeline-title">I, Robot</h4>
+                                    <p class="timeline-text">So in the future when the machines have taken over our lives who is going to provide the answers of a technical nature. Will technical support for robots be out sourced, who is going to be at the other end of the phone or who is going to be on live chat or answer all the emails when something goes wrong with a robot.
+                                                             There will be a technical support desk just off to the side of the robot and the words printed on the front of the desk will be “Technical Support Desk”. On the desk there will be a phone and a big thick manual the title of the manual will be “The 404 technical support manual” . But will this help?</p>
                                 </div>
                             </div>
                             <div id="swiper-id6" class="swiper-slide" data-year="2020">
                                 <div class="swiper-slide-content">
                                     <span class="timeline-year">2020</span>
-                                    <h4 class="timeline-title">Present day</h4>
+                                    <h4 class="timeline-title">Cacophony</h4>
                                     <p class="timeline-text">
-                                        We participate in the biggest world events, from the Monaco festival to Las Vegas, passing through Quebec.
-                                        The reputation of Wild Circus is well established and we offer a show that will delight all generations because this is our vocation, 'To provide entertainment accessible to all'.
+                                        "The 2020 Burning Man event theme explores the quantum kaleidoscope of possibility, the infinite realities of the multiverse, and our own superpositioning as actors and observers in the cosmic Cacophony of resonant strings," says a statement released by the festival.
                                     </p>
                                 </div>
                             </div>
@@ -142,9 +146,9 @@
 
         </div>
 
-        <div class="sectioncontact">
+        @*<div class="sectioncontact">
             <a onclick="div_show()"><img src="https://i.ibb.co/z87dXbS/Fichier-1.png" alt="Bouton_contact"></a>
-        </div>
+        </div>*@
     </section>
     
     <div class="wrapper">
@@ -164,6 +168,50 @@
                     @Html.ActionLink("Card!", "TicketSellPage", new {controller = "TicketManage"}, new {@target = "_blank", @class = "button-ticket", @style = "margin-left: 85%"})
                 }
             </div>
+            
+            
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-dark btn-sm" data-toggle="modal" data-target="#exampleModalCenter">
+              Rent RV
+            </button>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">RV Rental</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <div id="BukzaContainer15349"></div>
+                      <script type='text/javascript'>
+                                                 (function(){
+                                                     var d = document;
+                                                     var w = window;
+                                                     function l() {
+                                                         var s = d.createElement('script');
+                                                         s.type = 'text/javascript';
+                                                         s.async = true;
+                                                         s.src = 'https://public.bukza.com/api/script/generate/16562/15349/BukzaContainer15349?t=' + (new Date().getTime());
+                                                         var ss = d.getElementsByTagName('script')[0];
+                                                         ss.parentNode.insertBefore(s, ss);
+                                                     }
+                                                     if (d.readyState == 'complete') {
+                                                         l();
+                                                     } else {
+                                                         w.addEventListener('load', l, false);
+                                                     }
+                                                 })();
+                    </script>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            
+            
         </div>
       </div>
     </body>
